upload src code

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if IE]><![endif]-->
 
@@ -20,7 +19,7 @@
 <head>
 	<title>Amber Klepser's Personal Website</title>
 	<link href=styles.css rel=stylesheet />
-	<link rel="shortcut icon" type"image/ico" href="favicon.ico">
+	<link rel="shortcut icon" type"image/ico" href="http://amberklepser.altervista.org/images/favicon.ico">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -78,9 +77,9 @@
 
 			</p>
 
-			<img src="SeniorPic.JPG" alt="Picture of Amber" width=200 height=200/>
-			<img src="UT-Tower.JPG" alt="UT Tower" width=200 height=200/>
-			<img src="Hawaii.jpg" alt="Maui Beach" width=200 height=200/>
+			<img src="http://amberklepser.altervista.org/images/SeniorPic.JPG" alt="Picture of Amber" width=200 height=200/>
+			<img src="http://amberklepser.altervista.org/images/UT-Tower.JPG" alt="UT Tower" width=200 height=200/>
+			<img src="http://amberklepser.altervista.org/images/Hawaii.jpg" alt="Maui Beach" width=200 height=200/>
 
 
 		<br><br>
@@ -88,7 +87,7 @@
 
 		<h1>My Resume</h1>
 
-		<a href="Amber Klepser- UT Resume.pdf" target="_blank">View My Resume Here</a>
+		<a href="http://amberklepser.altervista.org/docs/Amber_Klepser-_UT_Resume.pdf" target="_blank">View My Resume Here</a>
 
 		<br><br>
 		<hr></hr>
@@ -123,13 +122,13 @@
 		<h1>Contact me via links below</h1>
 		<!--link to email-->
 
-		<img class="icon" src="email_badge.png" alt="Email Icon" width=24 height=24/>
+		<img class="icon" src="http://amberklepser.altervista.org/images/email_badge.png" alt="Email Icon" width=24 height=24/>
 		<a href="mailto:amberklepser@utexas.edu">Email me!</a>
 		<br>
-		<img class="icon" src="Facebook_Badge.png" alt="Facebook Icon" width=24 height=24/>
+		<img class="icon" src="http://amberklepser.altervista.org/images/Facebook_Badge.png" alt="Facebook Icon" width=24 height=24/>
 		<a href="https://www.facebook.com/amber.klepser" target="_blank">  My Facebook</a>
 		<br>
-		<img class="icon" src="instagram_icon.png" alt="Instagram Icon" width=24 height=24/>
+		<img class="icon" src="http://amberklepser.altervista.org/images/instagram_icon.png" alt="Instagram Icon" width=24 height=24/>
 		<a href="https://www.instagram.com/amber_klepser2/" target="_blank">@amber_klepser2</a>
 
 
