--- a/src/page2.html
+++ b/src/page2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!--[if IE]><![endif]-->
 
@@ -10,7 +9,7 @@
 <head class="page2">
 	<title>Amber Klepser's Personal Website</title>
 	<link href=styles.css rel=stylesheet />
-	<link rel="shortcut icon" type"image/ico" href="favicon.ico">
+	<link rel="shortcut icon" type"image/ico" href="http://amberklepser.altervista.org/images/favicon.ico">
 	<style>
 	html {background-color: orchid  ;}
 	h1{color:purple;}
@@ -56,9 +55,9 @@
 				</p>
 
 
-		<hr></hr>					<!--This is the code to create a horizontal line-->
+		<hr></hr>
 
-		<br>						<!--This is the code to add a blank line-->
+		<br>
 
 
 		<h1>Do Schools Kill Creativity?</h1>
